aws-tunnels-operator/config/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-tunnels-operator
  namespace: proxies
  labels:
    app.kubernetes.io/name: aws-tunnels-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-tunnels-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-tunnels-operator
    spec:
      serviceAccountName: aws-tunnels-operator
      containers:
        - name: manager
          image: ghcr.io/coollision/aws-tunnels-operator:v0.1.0
          imagePullPolicy: IfNotPresent
          args:
            - --metrics-bind-address=:8080
            - --health-probe-bind-address=:8081
          ports:
            - name: metrics
              containerPort: 8080
            - name: probes
              containerPort: 8081
            - name: auth
              containerPort: 8090
          readinessProbe:
            httpGet:
              path: /readyz
              port: probes
          livenessProbe:
            httpGet:
              path: /healthz
              port: probes
